[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "va_am"
version = "0.1.5"
authors = [{name="cosminmarina", email="cosmin.marina@uah.es" }]
description = "VA-AM method implementation"
readme = "README.md"
dependencies = ["requests","sympy","keras","tensorflow","xarray","netcdf4","matplotlib","pandas","numpy"]
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.scripts]
my-script = "scripts.main:mn"

[project.urls]
"Homepage" = "https://github.com/cosminmarina/va-am"
"Documentation" = "https://va-am.readthedocs.io/"